@@ -1,0 +1,8 @@
+language: java
+script: mvn clean package
+jdk:
+  - oraclejdk8
+  - oraclejdk7
+  - openjdk7
+os:
+  - linux
