@@ -1,5 +1,9 @@
 # Welcome to the home of ScribeJava, the simple OAuth Java lib!
 
+[![Build Status](https://travis-ci.org/scribejava/scribejava.svg?branch=master)](https://travis-ci.org/scribejava/scribejava)
+[![Maven Central](https://maven-badges.herokuapp.com/maven-central/com.github.scribejava/scribejava/badge.svg)](https://maven-badges.herokuapp.com/maven-central/com.github.scribejava/scribejava)
+
+
 # Why use ScribeJava?
 
 ### Dead Simple
